--- a/style.css
+++ b/style.css
@@ -141,14 +141,14 @@ body {
     font-size: 30px;
     text-align: center;
     color :	red ;
-    text-shadow: 1px 1px yellow;
+    text-shadow: 1px 1px black;
 }
 
 .check3 h6 {
     font-size: 30px;
     text-align: center;
     color :	red ;
-    text-shadow: 1px 1px yellow;
+    text-shadow: 1px 1px black;
 
 }
 
