--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: #232222;
-     background-image:url("bg.png");
+     background-image:url("CB.jpg");
      background-position: center;
      background-repeat: no-repeat;  
      background-size: cover;
@@ -19,6 +19,13 @@ body{
     }
     p5 {
         color:#FF0000 ;
+    }
+
+    p6 {
+        color : blue ;
+    }
+    p7 {
+        color : #3366FF;
     }
 body {
     margin: 0;
@@ -64,38 +71,42 @@ body {
 
 .mainHome .header h1 {
     text-align:center;
-    color: #fff;
+    color: skyblue;
     font-family: monospace;
     font-size : 3.2em;
     padding: 0px;
     margin: 0px;
+    text-shadow: 1px 1px blue;
 }
 
 .mainHome .header h2 {
     text-align:center;
-    color: #fff;
+    color: skyblue;
     font-family: monospace;
     font-size : 2.5em;
     padding: 0px;
     margin: 0px;
+    text-shadow: 1px 1px blue;
 }
 
 .mainHome .title h3 {
     text-align:center;
-    color: #fff;
+    color: orange;
     font-family: monospace;
     padding: 0px;
     margin: 0px;
     font-size:25px;
+    text-shadow: 1px 1px black;
 }
 
 .mainHome .title h4 {
     text-align:center;
-    color: #fff;
+    color: orange;
     font-family: monospace;
     padding: 0px;
     margin: 0px;
     font-size:15px;
+    text-shadow: 1px 1px black;
 }
 
 .mainHome .picture {
@@ -111,6 +122,7 @@ body {
     margin-left: 25%;
     font-size: 18px;
     font-weight: 300;
+    text-shadow: 1px 1px black;
 }
  
 .check1 h3 {
