--- a/login.css
+++ b/login.css
@@ -1,6 +1,6 @@
 body{
     background-color: #232222;
-     background-image:url("bg.png");
+     background-image:url("bg002.png");
      background-position: center;
      background-repeat: no-repeat;  
      background-size: cover;
